# safelog

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
scripts/: benchmark.py
site/: index.html
src/safelog/: __init__.py  cli.py  config.py  detectors.py  entropy.py  redact.py  stream.py
tests/: test_benchmark.py  test_broken_pipe.py  test_cli.py  test_cli_entropy.py  test_config.py  test_detectors_properties.py  test_entropy.py  test_entropy_properties.py  test_gitleaks_config.py  test_main_entrypoint.py  test_modes.py  test_pem_cli.py  test_redact.py  test_redact_entropy.py  test_redactor.py  test_sample_demo.py  test_stream.py  test_version.py  test_wow_moment.py
