[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safelog"
version = "1.0.0"
description = "Zero-dependency streaming filter that redacts secrets from logs and terminal output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Charlie Krug" }]

[project.urls]
Homepage = "https://apps.charliekrug.com/safelog/"
Repository = "https://github.com/ctkrug/safelog"
Issues = "https://github.com/ctkrug/safelog/issues"
Changelog = "https://github.com/ctkrug/safelog/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "hypothesis>=6.100"]

[project.scripts]
safelog = "safelog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
