[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safelog"
dynamic = ["version"]
description = "Zero-dependency streaming filter that redacts secrets from logs and terminal output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Charlie Krug" }]

[project.urls]
Homepage = "https://apps.charliekrug.com/safelog/"
Repository = "https://github.com/ctkrug/safelog"
Issues = "https://github.com/ctkrug/safelog/issues"
Changelog = "https://github.com/ctkrug/safelog/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "hypothesis>=6.100"]

[project.scripts]
safelog = "safelog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Single source of truth: the version lives in safelog/__init__.py, which is
# what `safelog --version` reports. Declaring it here too would let the two
# drift apart across a release.
[tool.setuptools.dynamic]
version = { attr = "safelog.__version__" }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Ruff's default selection is only E4/E7/E9 + F, which leaves the line-length
# above unenforced. Name the rules explicitly so `ruff check` actually holds
# the line: pycodestyle (incl. E501), pyflakes, import order, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
